# manychrome

./: Makefile  README.md  README.rst  pyproject.toml  setup.py
examples/: save_my_colors.ini
manychrome/: __init__.py  colorful.py  findme.py  happy_helpers.py  manychrome_examples.py  stylish.py
src/manychrome/: manychrome.py
