[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manychrome"
version = "0.0.1"
authors = [{ name = "maria Wenner", email = "mail@neurosystems.co" }]
description = "A simple package to colour and style your text printed on the CLI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
dependencies = ["dataclasses"]

[project.scripts]
manychrome_examples = "manychrome.examples:function"

[project.urls]
Homepage = "https://github.com/NeurosystemsCo/manychrome"
Issues = "https://github.com/NeurosystemsCo/manychrome/issues"
